[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Traps/Fire/Hit (16x32).png" type="Texture" id=1]
[ext_resource path="res://Traps/FirePod/FirePod.gd" type="Script" id=2]
[ext_resource path="res://Assets/Traps/Fire/Off.png" type="Texture" id=3]
[ext_resource path="res://Assets/Traps/Fire/On (16x32).png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "on",
"speed": 8.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "off",
"speed": 1.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "hit",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 5, 3 )

[node name="FirePod" type="StaticBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
animation = "off"
playing = true

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 9 )

[node name="Area2D" type="Area2D" parent="."]

[node name="AreaCollision" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -3 )
shape = SubResource( 10 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
